--- a/Assignment_8/Q1.html
+++ b/Assignment_8/Q1.html
@@ -1,1 +1,163 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tables</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        font-family: sans-serif;
+      }
+      .input {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 30px;
+      }
+      p {
+        margin-bottom: 10px;
+        font-size: 22px;
+      }
+      input {
+        border-radius: 5px;
+        border: 2px solid #000;
+        padding: 5px;
+      }
+      .container {
+        width: 1200px;
+        margin: 50px auto;
+      }
+      button {
+        padding: 8px 15px;
+        background-color: #087f5b;
+        color: #fff;
+        border-radius: 5px;
+        border: none;
+        cursor: pointer;
+      }
+      button:active {
+        background-color: #77b9a5;
+      }
+      table {
+        border-collapse: collapse;
+        margin: 20px auto;
+      }
+      th,
+      td {
+        padding: 12px 24px;
+        border: 1px solid black;
+        position: relative;
+      }
+      tr:nth-child(odd) {
+        background-color: #f8f9fa;
+      }
+      tr:nth-child(even) {
+        background-color: #e9ecef;
+      }
+      .delete-btn {
+        padding: 5px 10px;
+        background-color: #fff;
+        color: white;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+        font-size: 12px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="input">
+        <section>
+          <p>Columns :</p>
+          <input type="number" class="cols" min="1" />
+        </section>
+        <section>
+          <p>Rows :</p>
+          <input type="number" class="rows" min="1" />
+        </section>
+        <button type="button" onclick="generate()">Generate Table</button>
+      </div>
+      <div id="table-container"></div>
+    </div>
 
+    <script>
+      function generate() {
+        let columns = parseInt(document.querySelector(".cols").value.trim());
+        let rows = parseInt(document.querySelector(".rows").value.trim());
+        let container = document.getElementById("table-container");
+
+        // Clear previous table
+        container.innerHTML = "";
+
+        if (!columns || !rows || columns < 1 || rows < 1) {
+          alert("Please enter valid numbers for rows and columns.");
+          return;
+        }
+
+        let table = document.createElement("table");
+
+        for (let i = 0; i < rows; i++) {
+          let row = document.createElement("tr");
+
+          for (let j = 0; j < columns; j++) {
+            let cell = document.createElement("td");
+            cell.textContent = `(${i + 1}, ${j + 1})`;
+            row.appendChild(cell);
+          }
+
+          // Add Delete Row Button
+          let deleteRowCell = document.createElement("td");
+          let deleteRowBtn = document.createElement("button");
+          deleteRowBtn.textContent = "❌";
+          deleteRowBtn.classList.add("delete-btn");
+          deleteRowBtn.onclick = function () {
+            if (table.rows.length > 1) {
+              row.remove();
+            } else {
+              alert("At least one row must remain.");
+            }
+          };
+          deleteRowCell.appendChild(deleteRowBtn);
+          row.appendChild(deleteRowCell);
+
+          table.appendChild(row);
+        }
+
+        // Add Delete Column Buttons in the first row
+        let headerRow = document.createElement("tr");
+        for (let j = 0; j < columns; j++) {
+          let deleteColCell = document.createElement("td");
+          let deleteColBtn = document.createElement("button");
+          deleteColBtn.textContent = "❌";
+          deleteColBtn.classList.add("delete-btn");
+          deleteColBtn.onclick = function () {
+            let colIndex = j;
+            if (table.rows[0].cells.length > 2) {
+              // Ensures at least one column remains
+              for (let row of table.rows) {
+                row.deleteCell(colIndex);
+              }
+            } else {
+              alert("At least one column must remain.");
+            }
+          };
+          deleteColCell.appendChild(deleteColBtn);
+          headerRow.appendChild(deleteColCell);
+        }
+
+        // Add empty cell for row delete buttons
+        let emptyCell = document.createElement("td");
+        headerRow.appendChild(emptyCell);
+        table.insertBefore(headerRow, table.firstChild);
+
+        container.appendChild(table);
+      }
+    </script>
+  </body>
+</html>
