--- a/Assignment_8/Q7.html
+++ b/Assignment_8/Q7.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Key Press Detector</title>
     <style>
-        body {
-            width: 800px;
-
-            margin: 200px auto;
-        }
-        
-        p {
-            font-size: 22px ;
-           
-        }
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        text-align: center;
+        font-family: sans-serif;
+      }
+      p {
+        font-size: 22px;
+      }
+      span {
+        font-weight: bold;
+        color: #007bff;
+      }
     </style>
-</head>
-<body>
-    <p>Key Pressed:  <span id="text"></span></p>    
-    <script>
-        document.addEventListener("keypress", e => {
-            console.log(e.key);  
-            document.getElementById("text").innerHTML = e.key; 
-        });
+  </head>
+  <body>
+    <p>Key Pressed: <span id="text">None</span></p>
 
+    <script>
+      document.addEventListener("keydown", (e) => {
+        let key = e.key === " " ? "Space" : e.key;
+        console.log(key);
+        document.getElementById("text").textContent = key;
+      });
     </script>
-</body>
+  </body>
 </html>
